2006-04-26  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* ToolboxService.cs: Convert the TooboxItem arrays properly or they become
	null when empty, and ToolboxItemCollection gets unhappy. 

2006-01-16 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* MenuCommandService.cs, WebFormPage.cs, Document.cs: Reduce trivial warnings

2005-11-28 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* Document.cs, DesignerHost.cs: avoid duplicating controls in container when loading and unloading